# repo-projects

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: github_ci.yml
config/: env-sample
docker/: docker-compose.yml
mysite/: settings.py  urls.py
mysite/base/: forms.py  models.py  urls.py  views.py
mysite/base/migrations/: 0001_initial.py
mysite/base/static/base/css/: responsive.css  style.css
mysite/base/static/quiz/css/: quiz.css
mysite/base/templates/base/: base.html  gerador_senha.html  home.html  sobre_min.html
mysite/cursos/: admin.py  apps.py  context_processors.py  facade.py  models.py  urls.py  views.py
mysite/cursos/migrations/: 0001_initial.py
mysite/cursos/templates/cursos/: curso_detalhe.html  indice.html
mysite/cursos/tests/: test_views.py
mysite/quiz/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
mysite/quiz/migrations/: 0001_initial.py
mysite/quiz/templates/quiz/: base.html  classificacao.html  perguntas.html  quiz.html
mysite/quiz/tests/: test_views.py
mysite/tarefas/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/tarefas/migrations/: 0001_initial.py
mysite/tarefas/templates/base/: tarefas.html
